tests/snapshots/output_yara_integration__yara_all_tag_types.snap
---
source: tests/output_yara_integration.rs
expression: output
---
// YARA rule generated by Stringy
// Binary: tags.exe
// Generated: 1768722692

rule tags_exe_strings {
  meta:
    description = "Strings extracted from tags.exe"
    generated_by = "stringy"
    generated_at = "1768722692"
  strings:
    // tag: Domain
    // score: 0
    $Domain_1 = "domain" ascii
    // tag: Email
    // score: 0
    $Email_1 = "email" ascii
    // tag: Export
    // score: 0
    $Export_1 = "export" ascii
    // tag: Import
    // score: 0
    $Import_1 = "import" ascii
    // tag: Manifest
    // score: 0
    $Manifest_1 = "manifest" ascii
    // tag: Resource
    // score: 0
    $Resource_1 = "resource" ascii
    // tag: Url
    // score: 0
    $Url_1 = "url" ascii
    // tag: Version
    // score: 0
    $Version_1 = "version" ascii
    // tag: b64
    // score: 0
    $b64_1 = "b64" ascii
    // tag: demangled
    // score: 0
    $demangled_1 = "demangled" ascii
    // tag: dylib-path
    // score: 0
    $dylib_path_1 = "dylib" ascii
    // tag: filepath
    // score: 0
    $filepath_1 = "path" ascii
    // tag: fmt
    // score: 0
    $fmt_1 = "fmt" ascii
    // tag: framework-path
    // score: 0
    $framework_path_1 = "framework" ascii
    // tag: guid
    // score: 0
    $guid_1 = "guid" ascii
    // tag: ipv4
    // score: 0
    $ipv4_1 = "ipv4" ascii
    // tag: ipv6
    // score: 0
    $ipv6_1 = "ipv6" ascii
    // tag: regpath
    // score: 0
    $regpath_1 = "reg" ascii
    // tag: rpath
    // score: 0
    $rpath_1 = "rpath" ascii
    // tag: rpath-var
    // score: 0
    $rpath_var_1 = "rpathvar" ascii
    // tag: user-agent-ish
    // score: 0
    $user_agent_ish_1 = "agent" ascii
  condition:
    any of them
}
