tests/snapshots/output_yara_integration__yara_binary_name_sanitization.snap
---
source: tests/output_yara_integration.rs
expression: output
---
// YARA rule generated by Stringy
// Binary: weird name.exe
// Generated: 1768722692

rule weird_name_exe_strings {
  meta:
    description = "Strings extracted from weird name.exe"
    generated_by = "stringy"
    generated_at = "1768722692"
  strings:
    // tag: untagged
    // score: 0
    $untagged_1 = "alpha" ascii
  condition:
    any of them
}
