tests/snapshots/output_yara_integration__yara_edge_case_names-2.snap
---
source: tests/output_yara_integration.rs
expression: output_special
---
// YARA rule generated by Stringy
// Binary: #$%
// Generated: 0

rule ____strings {
  meta:
    description = "Strings extracted from #$%"
    generated_by = "stringy"
    generated_at = "0"
  strings:
    // tag: untagged
    // score: 0
    $untagged_1 = "alpha" ascii
  condition:
    any of them
}
