tests/snapshots/output_yara_integration__yara_edge_case_names.snap
---
source: tests/output_yara_integration.rs
expression: output_numbers
---
// YARA rule generated by Stringy
// Binary: 12345
// Generated: 1768722692

rule _12345_strings {
  meta:
    description = "Strings extracted from 12345"
    generated_by = "stringy"
    generated_at = "1768722692"
  strings:
    // tag: untagged
    // score: 0
    $untagged_1 = "alpha" ascii
  condition:
    any of them
}
