tests/snapshots/output_yara_integration__yara_empty_strings.snap
---
source: tests/output_yara_integration.rs
expression: output
---
// YARA rule generated by Stringy
// Binary: empty.bin
// Generated: 0

rule empty_bin_strings {
  meta:
    description = "Strings extracted from empty.bin"
    generated_by = "stringy"
    generated_at = "0"
  condition:
    true
}
