tests/snapshots/output_yara_integration__yara_encoding_modifiers.snap
---
source: tests/output_yara_integration.rs
expression: output
---
// YARA rule generated by Stringy
// Binary: enc.exe
// Generated: 0

rule enc_exe_strings {
  meta:
    description = "Strings extracted from enc.exe"
    generated_by = "stringy"
    generated_at = "0"
  strings:
    // tag: Resource
    // score: 0
    $Resource_1 = "wide" wide
    // tag: untagged
    // score: 0
    $untagged_1 = "ascii" ascii
  condition:
    any of them
}
