tests/snapshots/output_yara_integration__yara_high_scores.snap
---
source: tests/output_yara_integration.rs
expression: output
---
// YARA rule generated by Stringy
// Binary: scores.exe
// Generated: 1768722692

rule scores_exe_strings {
  meta:
    description = "Strings extracted from scores.exe"
    generated_by = "stringy"
    generated_at = "1768722692"
  strings:
    // tag: Domain
    // score: -10
    $Domain_1 = "low" ascii
    // tag: Url
    // score: 9999
    $Url_1 = "critical" ascii
  condition:
    any of them
}
