tests/snapshots/output_yara_integration__yara_long_strings_skipped.snap
---
source: tests/output_yara_integration.rs
expression: output
---
// YARA rule generated by Stringy
// Binary: long.exe
// Generated: 1768722692

rule long_exe_strings {
  meta:
    description = "Strings extracted from long.exe"
    generated_by = "stringy"
    generated_at = "1768722692"
  strings:
    // tag: Url
    // skipped (length > 200 chars): 201
  condition:
    true
}
