tests/snapshots/output_yara_integration__yara_mixed_encodings.snap
---
source: tests/output_yara_integration.rs
expression: output
---
// YARA rule generated by Stringy
// Binary: mixed.exe
// Generated: 0

rule mixed_exe_strings {
  meta:
    description = "Strings extracted from mixed.exe"
    generated_by = "stringy"
    generated_at = "0"
  strings:
    // tag: Domain
    // score: 0
    $Domain_1 = "utf8" ascii
    // tag: Resource
    // score: 0
    $Resource_1 = { 00 75 00 74 00 66 00 31 00 36 }
    // tag: Url
    // score: 0
    $Url_1 = "ascii" ascii
  condition:
    any of them
}
