tests/snapshots/output_yara_integration__yara_multiple_strings_different_tags.snap
---
source: tests/output_yara_integration.rs
expression: output
---
// YARA rule generated by Stringy
// Binary: diff-tag.exe
// Generated: 1768722692

rule diff_tag_exe_strings {
  meta:
    description = "Strings extracted from diff-tag.exe"
    generated_by = "stringy"
    generated_at = "1768722692"
  strings:
    // tag: Domain
    // score: 0
    $Domain_1 = "example.com" ascii
    // tag: Url
    // score: 0
    $Url_1 = "https://example.com" ascii
    // tag: ipv4
    // score: 0
    $ipv4_1 = "192.168.1.1" ascii
  condition:
    any of them
}
