tests/snapshots/output_yara_integration__yara_multiple_strings_same_tag.snap
---
source: tests/output_yara_integration.rs
expression: output
---
// YARA rule generated by Stringy
// Binary: same-tag.exe
// Generated: 1768722692

rule same_tag_exe_strings {
  meta:
    description = "Strings extracted from same-tag.exe"
    generated_by = "stringy"
    generated_at = "1768722692"
  strings:
    // tag: Url
    // score: 0
    $Url_1 = "alpha" ascii
    // score: 0
    $Url_2 = "beta" ascii
  condition:
    any of them
}
