tests/snapshots/output_yara_integration__yara_no_tags.snap
---
source: tests/output_yara_integration.rs
expression: output
---
// YARA rule generated by Stringy
// Binary: untagged.exe
// Generated: 0

rule untagged_exe_strings {
  meta:
    description = "Strings extracted from untagged.exe"
    generated_by = "stringy"
    generated_at = "0"
  strings:
    // tag: untagged
    // score: 0
    $untagged_1 = "no-tag" ascii
    // score: 0
    $untagged_2 = "still-no-tag" ascii
  condition:
    any of them
}
